fix: :bug: sourcemap

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "rollup": "rollup -c --bundleConfigAsCjs",
     "test": "jest",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "dev": "npm run storybook",
+    "build": "npm run build-storybook"
   },
   "author": "",
   "license": "ISC",
